--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://okara008.github.io/Visit-Hub/",
   "name": "visit-hub",
+  "homepage": "https://okara008.github.io/Visit-Hub",
   "private": true,
   "version": "0.0.0",
   "type": "module",
